# vlmocr

./: .gitignore  LICENSE  README.md  pyproject.toml
converted/json/: predict.json
converted/json/raw/: test.json
converted/md/: predict.md
converted/md/table of contents/: predict_toc.md  test_toc.md
examples/converted/: test.md
src/vlmocr/: __init__.py  __main__.py  cli.py  contract.py  conversion.py  estimate_cost.py  ocr.py  text_cleaning.py
tests/: test_cli.py  test_contract.py  test_conversion.py  test_ocr.py
