[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vlmocr"
version = "0.1.0"
description = "PDF rendering, OpenRouter VLM OCR, conversion, and OCR cost estimation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=1.0.0",
    "pymupdf>=1.27.1",
    "tqdm>=4.67.2",
]

[project.scripts]
vlmocr = "vlmocr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vlmocr"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
